--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
     </div>
     <div class="section">
-        <h2>Representing images</h2>
+        <h2>Process of merging clouds</h2>
         <hr>
         <p>
             A Siren that maps 2D pixel coordinates to a color may be used to parameterize images. Here, we supervise Siren
@@ -54,138 +54,13 @@
             fewer iterations than all baseline architectures, but is also the only MLP that accurately represents the first-
             and second order derivatives of the image.
         </p>
-        <div class="row align-items-center">
-            <div class="col justify-content-center text-center">
-                <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="img/image_convergence_15s_label.mp4" type="video/mp4">
-                </video>
-            </div> 
-        </div>
-        <div class="row align-items-center">
-			<div class="col justify-content-center text-center">
-                <video width="40%" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="img/psnr_image_convergence_15s.mp4" type="video/mp4">
-                </video>
-            </div> 
-        </div>
     </div>
 
     <div class="section">
-        <h2>Representing Audio</h2>
+        <h2>Demo Video</h2>
         <hr>
         <p>
-            A Siren with a single, time-coordinate input and scalar output may parameterize audio signals. Siren is the
-            only network architecture that succeeds in reproducing the audio signal, both for music and human voice.
-        </p>
-        <div class="row justify-content-left">
-            <div class="col-sm-3">
-                <h5>Ground truth</h5>
-                <img src="img/audio/gt_bach.png" style="width:100%">
-                <audio
-                        controls
-                        src="img/audio/gt_bach.wav"
-                        class="media-left"
-                        style="width:100%">
-                    Your browser does not support the
-                    <code>audio</code> element.
-                </audio>
-            </div>
-            <div class="col-sm-3">
-                <h5>ReLU MLP</h5>
-                <img src="img/audio/relu_bach.png" style="width:100%">
-                <audio
-                        controls
-                        src="img/audio/relu_bach.wav"
-                        class="media-left"
-                        style="width:100%">
-                    Your browser does not support the
-                    <code>audio</code> element.
-                </audio>
-            </div>
-            <div class="col-sm-3">
-                <h5>ReLU w/ Pos. Enc.</h5>
-                <img src="img/audio/relu_pe_bach.png" style="width:100%">
-                <audio
-                        controls
-                        src="img/audio/relu_pe_bach.wav"
-                        class="media-left"
-                        style="width:100%">
-                    Your browser does not support the
-                    <code>audio</code> element.
-                </audio>
-            </div>
-            <div class="col-sm-3">
-                <h5>Siren</h5>
-                <img src="img/audio/siren_bach.png" style="width:100%">
-                <audio
-                        controls
-                        src="img/audio/siren_bach.wav"
-                        class="media-left"
-                        style="width:100%">
-                    Your browser does not support the
-                    <code>audio</code> element.
-                </audio>
-            </div>
-
-            <div class="row justify-content-left">
-                <div class="col-sm-3">
-<!--                    <h5>Ground truth</h5>-->
-                    <img src="img/audio/gt_counting.png" style="width:100%">
-                    <audio
-                            controls
-                            src="img/audio/gt_counting.wav"
-                            class="media-left"
-                            style="width:100%">
-                        Your browser does not support the
-                        <code>audio</code> element.
-                    </audio>
-                </div>
-                <div class="col-sm-3">
-<!--                    <h5>ReLU MLP</h5>-->
-                    <img src="img/audio/relu_counting.png" style="width:100%">
-                    <audio
-                            controls
-                            src="img/audio/relu_counting.wav"
-                            class="media-left"
-                            style="width:100%">
-                        Your browser does not support the
-                        <code>audio</code> element.
-                    </audio>
-                </div>
-                <div class="col-sm-3">
-<!--                    <h5>ReLU P.E.</h5>-->
-                    <img src="img/audio/relu_pe_counting.png" style="width:100%">
-                    <audio
-                            controls
-                            src="img/audio/relu_pe_counting.wav"
-                            class="media-left"
-                            style="width:100%">
-                        Your browser does not support the
-                        <code>audio</code> element.
-                    </audio>
-                </div>
-                <div class="col-sm-3">
-<!--                    <h5>Siren</h5>-->
-                    <img src="img/audio/siren_counting.png" style="width:100%">
-                    <audio
-                            controls
-                            src="img/audio/siren_counting.wav"
-                            class="media-left"
-                            style="width:100%">
-                        Your browser does not support the
-                        <code>audio</code> element.
-                    </audio>
-                </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <h2>Representing Video</h2>
-        <hr>
-        <p>
-            A Siren with pixel coordinates together with a time coordinate can be used to parameterize a video.
-            Here, Siren is directly supervised with the ground-truth pixel values, and parameterizes video significantly
-            better than a ReLU MLP.
+            The video below shows the process that our algorithm builds up the pointcloud of some objects.
         </p>
         <div class="row align-items-center">
             <div class="col justify-content-center text-center">
@@ -201,72 +76,45 @@
         </div>
     </div>
 
-    <div class="section">
-        <h2>Solving the Poisson Equation</h2>
-        <hr>
-        <p>
-            By supervising only the derivatives of Siren, we can solve <a href="https://en.wikipedia.org/wiki/Poisson%27s_equation">Poisson's equation</a>.
-            Siren is again the only architecture that fits image, gradient, and laplacian domains accurately and swiftly.
-        </p>
-         <div class="row align-items-center">
-            <div class="col justify-content-center text-center">
-                <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="img/poisson_convergence_15s_label.mp4" type="video/mp4">
-                </video>
-            </div> 
-        </div>
-        <div class="row align-items-center">
-			<div class="col justify-content-center text-center">
-                <video width="40%" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="img/psnr_poisson_convergence_15s.mp4" type="video/mp4">
-                </video>
-            </div> 
-        </div>
-    </div>
 
     <div class="section">
-        <h2>Representing shapes by solving the Eikonal equation<br>
-            Interactive 3D SDF Viewer - Use Your Mouse to Navigate the Scenes</h2>
+        <h2>Pointcloud building process<br>
+            Interactive 3D mesh Viewer - Use Your Mouse to Observe</h2>
         <hr>
         <p>
-            We can recover an SDF from a pointcloud and surface normals by solving the <a
-                href="https://www.google.com/search?client=ubuntu&channel=fs&q=eikonal+equation&ie=utf-8&oe=utf-8">Eikonal
-            equation</a>,
-            a first-order boundary value problem. SIREN can recover a room-scale scene given only its pointcloud
-            and surface normals, accurately reproducing fine detail, in less than an hour of training.
-            In contrast to recent work on combining voxel grids with neural implicit representations,
-            this stores the full scene in the weights of a single, 5-layer neural network, with no 2D or 3D
-            convolutions, and orders of magnitude fewer parameters. Zoom in to compare fine detail!
-            <b>Note that these SDFs are not supervised with ground-truth SDF / occupancy values, but rather, are the
-            result of solving the above Eikonal boundary value problem. This is a significantly harder task,
-            which requires supervision in the gradient domain (see paper). As a result, architectures whose gradients
-            are not well-behaved perform worse than SIREN.</b>
+            The software <a href="https://www.meshlab.net/">meshlab</a> is used to generate mesh files from the pointclouds. We computed the normals for the clouds and used the Ball-Pivoting Algorithm to produce the final meshes.
         </p>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6 padding-0 canvas-row">
-                    <h4>Room - Siren</h4>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - first scene</h4>
                     <model-viewer
                             alt="Room Siren"
-                            src="img/room_siren.glb"
+                            src="./src/clouds/6_first.glb"
                             style="width: 100%; height:300px; background-color: #404040"
                             exposure=".8"
-                            camera-orbit="0deg 75deg 105%"
-                            auto-rotate
                             camera-controls>
                     </model-viewer>
                 </div>
-                <div class="col-md-6 padding-0 canvas-row">
-                    <h4>Room - ReLU</h4>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - after 5 scenes</h4>
                     <model-viewer
                             alt="Room ReLU"
-                            src="img/room_relu.glb"
+                            src="./src/clouds/6_final.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
-                            auto-rotate
                             camera-controls>
                     </model-viewer>
-                    <!--                            poster="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5e7e6db2d75a9b467eee4111_legomesh_cover.png"-->
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - final scene</h4>
+                    <model-viewer
+                            alt="Room ReLU"
+                            src="./src/clouds/7_first.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
                 </div>
             </div>
             <div class="row align-items-center">
@@ -342,7 +190,7 @@
     </div>
 
     <div class="section">
-        <h2>Related Projects</h2>
+        <!-- <h2>Related Projects</h2>
         <hr>
         <p>
             Check out our related projects on the topic of implicit neural representations! <br>
@@ -400,7 +248,7 @@
                     semantic segmentation on a class of objects (such as chairs) given only a single, 2D (!) semantic label map!
                 </div>
             </div>
-        </div>
+        </div> -->
 
     <div class="section">
         <h2>References</h2>
