--- a/index.html
+++ b/index.html
@@ -89,6 +89,70 @@
                 <div class="col-md-4 padding-0 canvas-row">
                     <h4>Watch - first scene</h4>
                     <model-viewer
+                            alt="Watch - first scene"
+                            src="./src/clouds/6_first.glb"
+                            style="width: 100%; height:300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - after 5 scenes</h4>
+                    <model-viewer
+                            alt="Watch - after 5 scenes"
+                            src="./src/clouds/6_mid.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - final scene</h4>
+                    <model-viewer
+                            alt="Watch - final scene"
+                            src="./src/clouds/6_final.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Lock - first scene</h4>
+                    <model-viewer
+                            alt="Lock - first scene"
+                            src="./src/clouds/7_first.glb"
+                            style="width: 100%; height:300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Lock - after 5 scenes</h4>
+                    <model-viewer
+                            alt="Lock - after 5 scenes"
+                            src="./src/clouds/7_mid.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Lock - final scene</h4>
+                    <model-viewer
+                            alt="Lock - final scene"
+                            src="./src/clouds/7_final.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - first scene</h4>
+                    <model-viewer
                             alt="Room Siren"
                             src="./src/clouds/6_first.glb"
                             style="width: 100%; height:300px; background-color: #404040"
@@ -119,38 +183,64 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Statue - Siren</h4>
+                    <h4>Watch - first scene</h4>
                     <model-viewer
-                            alt="Statue Siren"
-                            src="img/statue_siren.glb"
-                            style="width: 100%; height: 600px; background-color: #404040"
+                            alt="Room Siren"
+                            src="./src/clouds/6_first.glb"
+                            style="width: 100%; height:300px; background-color: #404040"
                             exposure=".8"
-                            camera-orbit="0deg 75deg 20%"
-                            auto-rotate
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Statue - ReLU Pos. Enc.</h4>
+                    <h4>Watch - after 5 scenes</h4>
                     <model-viewer
-                            alt="Statue Positional Encoding"
-                            src="img/statue_relu_pe.glb"
-                            style="width: 100%; height: 600px; background-color: #404040"
+                            alt="Room ReLU"
+                            src="./src/clouds/6_final.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
-                            camera-orbit="0deg 75deg 20%"
-                            auto-rotate
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Statue - ReLU</h4>
+                    <h4>Watch - final scene</h4>
                     <model-viewer
-                            alt="Statue ReLU"
-                            src="img/statue_relu.glb"
-                            style="width: 100%; height: 600px; background-color: #404040"
+                            alt="Room ReLU"
+                            src="./src/clouds/7_first.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
-                            camera-orbit="0deg 75deg 20%"
-                            auto-rotate
+                            camera-controls>
+                    </model-viewer>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - first scene</h4>
+                    <model-viewer
+                            alt="Room Siren"
+                            src="./src/clouds/6_first.glb"
+                            style="width: 100%; height:300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - after 5 scenes</h4>
+                    <model-viewer
+                            alt="Room ReLU"
+                            src="./src/clouds/6_final.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
+                            camera-controls>
+                    </model-viewer>
+                </div>
+                <div class="col-md-4 padding-0 canvas-row">
+                    <h4>Watch - final scene</h4>
+                    <model-viewer
+                            alt="Room ReLU"
+                            src="./src/clouds/7_first.glb"
+                            style="width: 100%; height: 300px; background-color: #404040"
+                            exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
