--- a/index.html
+++ b/index.html
@@ -42,17 +42,23 @@
         <h2>Introduction</h2>
         <hr>
         <p>
-            In this project, I adopted an improved version of the <i>Iterative Closest Point</i> algorithm to merge the pointclouds of an object obtained from different perspectives. 
+            In this project, I adopted an <a href="https://users.cs.duke.edu/~tomasi/papers/phillips/phillips3DIM07.pdf">improved version</a> of the <i>Iterative Closest Point</i> algorithm to merge the pointclouds of an object obtained from different perspectives. 
         </p>
     </div>
     <div class="section">
         <h2>Process of merging clouds</h2>
         <hr>
         <p>
-            A Siren that maps 2D pixel coordinates to a color may be used to parameterize images. Here, we supervise Siren
-            directly with ground-truth pixel values. Siren not only fits the image with a 10 dB higher PSNR and in significantly
-            fewer iterations than all baseline architectures, but is also the only MLP that accurately represents the first-
-            and second order derivatives of the image.
+            To establish the entire pointcloud of objects, our program is given several scenes of objects randomly scattered on a table. Each scene produces a single pointcloud for each object, assuming that we can perfectly isolate an items' cloud from the background. 
+            The process starts by aligning the clouds in the first and second scene and checks if they can be merged by my icp algorithm. If the merge is successful, the combined cloud is stored as the pointcloud representing that particular item; otherwise, the bigger of the two clouds is stored. Then, we continuously merge the current "stored" cloud with the cloud from the next scene using the identical process. 
+        </p>
+        <p>
+            Here's the details on how I align and merge clouds:<br>
+            <ul>
+            <li>Points are sampled from the larger cloud to make its size the same as the smaller one. (The tranformation matrix computed by the SVD method performs badly if I directly find the nearest neighbors from one cloud to another without this process.) The points selected are random so I perform the whole process several(5) times and take the one that produces the lowest error.</li>
+            <li>As icp’s performance is reliant on the clouds’ initial orientation, I also perform icp on clouds that are formed by rotating one of the two clouds 180 degrees about the x, y, and z axes, leading to 4 clouds for each new view of an item. Thus, I end up running 4*5=20 icps for each item.</li>>
+            <li>The error measure of the adjusted icp, fractional root mean SD (FRMSD), seems to align with the success of the alignment. I merge the two clouds if the FRMSD value of the alignment is below 0.003. Now I am also moving towards t could also be used to identify if the two clouds are from the same object.</li>
+            </ul>
         </p>
     </div>
 
@@ -60,29 +66,30 @@
         <h2>Demo Video</h2>
         <hr>
         <p>
-            The video below shows the process that our algorithm builds up the pointcloud of some objects.
+            The video below shows the scenes given to our algorithm.<br>
         </p>
         <div class="row align-items-center">
             <div class="col justify-content-center text-center">
                 <video width="50%" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="img/cat_comparison_label.mp4" type="video/mp4">
+                    <source src="src/demo.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="col justify-content-center text-center">
+            <!-- <div class="col justify-content-center text-center">
                 <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="img/bikes_comparison_label.mp4" type="video/mp4">
+                    <source src="src/bikes_comparison_label.mp4" type="video/mp4">
                 </video>
-            </div>
+            </div> -->
         </div>
     </div>
 
 
     <div class="section">
-        <h2>Pointcloud building process<br>
+        <h2>Pointcloud in process<br>
             Interactive 3D mesh Viewer - Use Your Mouse to Observe</h2>
         <hr>
         <p>
-            The software <a href="https://www.meshlab.net/">meshlab</a> is used to generate mesh files from the pointclouds. We computed the normals for the clouds and used the Ball-Pivoting Algorithm to produce the final meshes.
+            The software <a href="https://www.meshlab.net/">meshlab</a> is used to generate mesh files from the pointclouds. We computed the normals for the clouds and used the Ball-Pivoting Algorithm to produce the final meshes.<br>
+            
         </p>
         <div class="container">
             <div class="row align-items-center">
@@ -151,94 +158,94 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - first scene</h4>
+                    <h4>Headset - first scene</h4>
                     <model-viewer
-                            alt="Room Siren"
-                            src="./src/clouds/6_first.glb"
+                            alt="Headset - first scene"
+                            src="./src/clouds/8_first.glb"
                             style="width: 100%; height:300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - after 5 scenes</h4>
+                    <h4>Headset - after 5 scenes</h4>
                     <model-viewer
-                            alt="Room ReLU"
-                            src="./src/clouds/6_final.glb"
+                            alt="Headset - after 5 scenes"
+                            src="./src/clouds/8_mid.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - final scene</h4>
+                    <h4>Headset - final scene</h4>
                     <model-viewer
-                            alt="Room ReLU"
-                            src="./src/clouds/7_first.glb"
+                            alt="Headset - final scene"
+                            src="./src/clouds/8_final.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
             </div>
-            <div class="row align-items-center">
+            <!-- <div class="row align-items-center">
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - first scene</h4>
+                    <h4>Another watch - first scene</h4>
                     <model-viewer
-                            alt="Room Siren"
-                            src="./src/clouds/6_first.glb"
+                            alt="Another watch - first scene"
+                            src="./src/clouds/9_first.glb"
                             style="width: 100%; height:300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - after 5 scenes</h4>
+                    <h4>Another watch - after 5 scenes</h4>
                     <model-viewer
-                            alt="Room ReLU"
-                            src="./src/clouds/6_final.glb"
+                            alt="Another watch - after 5 scenes"
+                            src="./src/clouds/9_mid.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - final scene</h4>
+                    <h4>Another watch - final scene</h4>
                     <model-viewer
                             alt="Room ReLU"
-                            src="./src/clouds/7_first.glb"
+                            src="./src/clouds/9_final.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
-            </div>
+            </div> -->
             <div class="row align-items-center">
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - first scene</h4>
+                    <h4>Hat - first scene</h4>
                     <model-viewer
-                            alt="Room Siren"
-                            src="./src/clouds/6_first.glb"
+                            alt="Hat - first scene"
+                            src="./src/clouds/10_first.glb"
                             style="width: 100%; height:300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - after 5 scenes</h4>
+                    <h4>Hat - after 5 scenes</h4>
                     <model-viewer
-                            alt="Room ReLU"
-                            src="./src/clouds/6_final.glb"
+                            alt="Hat - after 5 scenes"
+                            src="./src/clouds/10_mid.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
-                    <h4>Watch - final scene</h4>
+                    <h4>Hat - final scene</h4>
                     <model-viewer
-                            alt="Room ReLU"
-                            src="./src/clouds/7_first.glb"
+                            alt="Hat - final scene"
+                            src="./src/clouds/10_final.glb"
                             style="width: 100%; height: 300px; background-color: #404040"
                             exposure=".8"
                             camera-controls>
@@ -253,7 +260,7 @@
         </script>
     </div>
 
-    <div class="section">
+    <!-- <div class="section">
         <h2>Solving the Helmholtz equation</h2>
         <hr>
         <p>
@@ -277,7 +284,7 @@
         <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" class="gif">
             <source src="img/wave_combined_pad_label.mp4" type="video/mp4">
         </video>
-    </div>
+    </div> -->
 
     <div class="section">
         <!-- <h2>Related Projects</h2>
