update number of points

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1540</h4>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
                     <h4>Item 2</h4>
@@ -124,6 +125,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1633</h4>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
                     <h4>Item 3</h4>
@@ -134,6 +136,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1878</h4>
                 </div>
             </div>
             <h3> Clouds after 3 scenes </h3>
@@ -149,6 +152,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1540</h4>
                 </div>
             </div>
             <h4>Item 2 (2 representations):</h4>
@@ -162,6 +166,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 2064</h4>
                 </div>
                 <div class="col-md-6 padding-0 canvas-row">
                     <model-viewer
@@ -171,6 +176,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1815</h4>
                 </div>
             </div>
             <h4>Item 3 (1 representation):</h4>
@@ -183,6 +189,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1878</h4>
                 </div>
             </div>
             <h4>Item 4 (2 representations):</h4>
@@ -195,6 +202,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1732</h4>
                 </div>
                 <div class="col-md-6 padding-0 canvas-row">
                     <model-viewer
@@ -204,6 +212,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1587</h4>
                 </div>
             </div>
             <h4>Item 5 (1 representation):</h4>
@@ -216,6 +225,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1629</h4>
                 </div>
             </div>
             <h4>Item 6 (1 representation):</h4>
@@ -228,6 +238,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1973</h4>
                 </div>
             </div>
             <h3> Clouds after 6 scenes </h3>
@@ -243,6 +254,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 2246</h4>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
                     <model-viewer
@@ -252,6 +264,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1522</h4>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
                     <model-viewer
@@ -261,6 +274,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1398</h4>
                 </div>
             </div>
             <h4>Item 2 (3 representations):</h4>
@@ -273,6 +287,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 2634</h4>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
                     <model-viewer
@@ -282,6 +297,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 3159</h4>
                 </div>
                 <div class="col-md-4 padding-0 canvas-row">
                     <model-viewer
@@ -291,6 +307,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 2571</h4>
                 </div>
             </div>
             <h4>Item 3 (2 representations):</h4>
@@ -303,6 +320,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1878</h4>
                 </div>
                 <div class="col-md-6 padding-0 canvas-row">
                     <model-viewer
@@ -312,6 +330,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 862</h4>
                 </div>
             </div>
             <h4>Item 4 (2 representations):</h4>
@@ -324,6 +343,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1732</h4>
                 </div>
                 <div class="col-md-6 padding-0 canvas-row">
                     <model-viewer
@@ -333,6 +353,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1587</h4>
                 </div>
             </div>
             <h4>Item 5 (1 representation):</h4>
@@ -345,6 +366,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1629</h4>
                 </div>
             </div>
             <h4>Item 6 (1 representation):</h4>
@@ -357,6 +379,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1973</h4>
                 </div>
             </div>
             <h4>Item 7 (1 representation):</h4>
@@ -369,6 +392,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1568</h4>
                 </div>
             </div>
             <h4>Item 8 (1 representation):</h4>
@@ -381,6 +405,7 @@
                             exposure=".8"
                             camera-controls>
                     </model-viewer>
+                    <h4>Num of points: 1779</h4>
                 </div>
             </div>
         </div>
